--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "mongoose": "^5.12.3",
+    "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
     "nodeman": "^1.1.2",
     "passport": "^0.4.1",
