--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
+    "nodemailer": "^6.6.0",
     "nodeman": "^1.1.2",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
